kubernetes/ingressclasses.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: 'true'
  name: internal-ingress
spec:
  controller: nginx.org/ingress-controller
