kubernetes/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: CertManager
  name: cert-manager
spec:
  ports:
  - name: monitor
    port: 9402
    targetPort: 9402
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/part-of: kubernetes
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: '9153'
    prometheus.io/scrape: 'true'
  labels:
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: CoreDNS
  name: coredns
spec:
  clusterIP: 10.16.0.8
  ports:
  - name: dns
    port: 53
    targetPort: 53
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
  - name: monitor
    port: 9153
    targetPort: 9153
  selector:
    app.kubernetes.io/component: coredns
    app.kubernetes.io/name: coredns
    app.kubernetes.io/part-of: kubernetes
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: progamesigner.net
    metallb.universe.tf/allow-shared-ip: internal-ingress
  labels:
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: InternalIngress
  name: internal-ingress
spec:
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    targetPort: 80
    appProtocol: http
  - name: https
    port: 443
    targetPort: 443
    appProtocol: https
  - name: dns-over-tls
    port: 853
    targetPort: 853
    appProtocol: domain-s
  selector:
    app.kubernetes.io/component: nginx-ingress
    app.kubernetes.io/name: internal-nginx-ingress
    app.kubernetes.io/part-of: kubernetes
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: internal-ingress
  name: internal-ingress-udp
spec:
  externalTrafficPolicy: Local
  ports:
  - name: https
    port: 443
    targetPort: 443
    protocol: UDP
    appProtocol: https
  - name: dns-over-tls
    port: 853
    targetPort: 853
    protocol: UDP
    appProtocol: domain-s
  selector:
    app.kubernetes.io/component: nginx-ingress
    app.kubernetes.io/name: internal-nginx-ingress
    app.kubernetes.io/part-of: kubernetes
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: external-ingress
  labels:
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: ExternalIngress
  name: external-ingress
spec:
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    targetPort: 80
    appProtocol: http
  - name: https
    port: 443
    targetPort: 443
    appProtocol: https
  - name: dns-over-tls
    port: 853
    targetPort: 853
    appProtocol: domain-s
  selector:
    app.kubernetes.io/component: nginx-ingress
    app.kubernetes.io/name: external-nginx-ingress
    app.kubernetes.io/part-of: kubernetes
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: external-ingress
  name: external-ingress-udp
spec:
  externalTrafficPolicy: Local
  ports:
  - name: https
    port: 443
    targetPort: 443
    protocol: UDP
    appProtocol: https
  - name: dns-over-tls
    port: 853
    targetPort: 853
    protocol: UDP
    appProtocol: domain-s
  selector:
    app.kubernetes.io/component: nginx-ingress
    app.kubernetes.io/name: external-nginx-ingress
    app.kubernetes.io/part-of: kubernetes
  type: LoadBalancer
