kubernetes/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-default-backend
spec:
  ingressClassName: internal-ingress-nginx
  rules:
  - host: ''
    http:
      paths:
      - backend:
          service:
            name: default-backend
            port:
              name: http
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-default-backend
spec:
  ingressClassName: external-ingress-nginx
  rules:
  - host: ''
    http:
      paths:
      - backend:
          service:
            name: default-backend
            port:
              name: http
        path: /
        pathType: Prefix
